# axum-cinema-api

./: Cargo.toml  Secrets.toml.example  readme.md
src/: main.rs  utils.rs  websockets.rs
src/controllers/: hall_controller.rs  home_controller.rs  mod.rs  movie_controller.rs  session_controller.rs
src/models/: hall_model.rs  mod.rs  movie_model.rs  session_model.rs
