[package]
name = "cinema-api"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3.30"
mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
shuttle-secrets = "0.41.0"
anyhow = "1.0.81"
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = "0.4.35"
